<resources>
    <string name="app_name">MHC Health App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="greenJuicelink">https://youtu.be/OuLGnM0O2z8</string>
    <string name="selfCareGame">https://youfeellikeshit.com/</string>
    <string name="kendallGymLink">http://athletics.mtholyoke.edu/documents/kendalldropin.pdf</string>
    <string name="sleepLink">https://www.youtube.com/watch?v=dqONk48l5vY</string>
    <string name="mentalStretch">https://youtu.be/ce9pQ9-X7iA</string>
    <string name="sleepSched">https://www.sleep.org/articles/get-sleep-schedule/</string>
    <string name="nutritionLink">https://www.youtube.com/playlist?list=PLstmqf7jF1jbD7Sbcpfe600zJNTpIkh-y</string>
    <string name="link">https://youtu.be/OuLGnM0O2z8</string>
    <string name="linkk">https://youtu.be/OuLGnM0O2z8</string>

    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="physical">Physical</string>
    <!--<string name="this_is_some_information_about_physical_health_and_how_to_take_care_of_it">This is some information about physical health and how to take care of it</string>-->
    <string name="emotional">Emotional</string>
    <string name="mental">Mental</string>
    <!--<string name="some_info_about_emotional_health_insert_insert_yadda_ydaa_good_stuff">Some Info. about Emotional health insert insert yadda ydaa good stuff</string>-->
    <string name="homeicondescription">Home is here! There\'s our welcome gif and a short description of the features in this app.</string>
    <string name="resourcesicondescription">The resources page contains links for you to explore the different ways of taking care of your health!</string>
    <string name="infoicondescription">The information page briefly describes the different kinds of health (by no means exhaustive)</string>
    <string name="checklisticondescription">The checklist allows you to keep track of whether or not you\'ve worked on maintaining the different aspects of your health</string>
    <string name="journalicondescription">The journal serves as an emotional outlet and a resource to reflect on really anything you\'d like!</string>
    <string name="gratitudeandaffirmationsicondescription">The gratitude and affirmations page allows you to feel thankful, more positive, and receive a lovely affirmation!</string>
    <string name="home_icon">home icon</string>
    <string name="info_icon">info icon</string>
    <string name="resource_icon">resource icon</string>
    <string name="checklist_icon">checklist icon</string>
    <string name="journal_icon">journal icon</string>
    <string name="gratitude_and_affirmations_icon">gratitude and affirmations icon</string>
</resources>
