<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/welcomegif" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="245dp"
        android:contentDescription="@string/home_icon"
        android:src="@drawable/baseline_home_black_18dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView3"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/info_icon"
        android:src="@drawable/baseline_info_black_18dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="208dp"
        android:layout_marginTop="323dp"
        android:contentDescription="@string/resource_icon"
        android:src="@drawable/baseline_bookmarks_black_18dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView5"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/checklist_icon"
        android:src="@drawable/baseline_list_alt_black_18dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView3"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/journal_icon"
        android:src="@drawable/baseline_edit_black_18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="85dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-51dp"
        android:layout_toEndOf="@+id/imageView3"
        android:text="@string/homeicondescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="153dp"
        android:layout_height="87dp"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/resourcesicondescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="92dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="-54dp"
        android:text="@string/infoicondescription" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="161dp"
        android:layout_height="93dp"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="5dp"
        android:text="@string/checklisticondescription" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="145dp"
        android:layout_height="87dp"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="-49dp"
        android:text="@string/journalicondescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="-37dp"
        android:layout_marginTop="-3dp"
        android:layout_toEndOf="@+id/imageView6"
        android:contentDescription="@string/gratitude_and_affirmations_icon"
        android:src="@drawable/baseline_thumb_up_black_18dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="167dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="5dp"
        android:text="@string/gratitudeandaffirmationsicondescription" />

</RelativeLayout>