<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResourcesFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/LinkstoOverall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="142dp"
        android:text="Links for Overall Health"
        android:textAllCaps="false"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/greenJuiceLink"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LinkstoOverall"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="161dp"
        android:autoLink="web"
        android:text="@string/greenJuicelink"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/greenJuiceDetoxTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LinkstoOverall"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="161dp"
        android:text="Green Juice Detox"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:text="Welcome to the Resources Page!"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="63dp"
        android:text="Here, you can find various links to different pages for:\nnutrition, exercise, meditation, yoga, tips on how to be healthy and more." />

    <TextView
        android:id="@+id/selfCareTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/greenJuiceDetoxTag"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="178dp"
        android:text="Self Care Game:"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/selfCareGLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/greenJuiceDetoxTag"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="177dp"
        android:autoLink="web"
        android:text="@string/selfCareGame"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/kendallGymTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/greenJuiceDetoxTag"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="192dp"
        android:text="Kendall Gym Schedule:"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/kendallGymLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/greenJuiceDetoxTag"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginBottom="308dp"
        android:autoLink="web"
        android:text="@string/kendallGymLink"
        android:textSize="8sp" />

</RelativeLayout>